<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="#C836D125"
        android:gravity="center"
        android:text="@string/tittle"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="350dp"
        android:layout_height="510dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title">

        <LinearLayout
            android:id="@+id/PlanetList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/BoxLyt"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#FFC107"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="0.5"
                    android:background="#AF6F11"
                    android:contentDescription="@string/planet"
                    tools:srcCompat="@drawable/mercury" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FFC107"
                    android:hint="@string/planet"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:text="@string/firstPlanet"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>